# Gos3lih

./: Cargo.toml  README.md  build.rs  ipc-schema.json
.cargo/: config.toml
.github/workflows/: build-release.yml
netflow-pro/: .gitignore  Cargo.toml  README.md  build.rs  ipc-schema.json
netflow-pro/.github/workflows/: build-release.yml
netflow-pro/src/: main.rs
netflow-pro/src/discovery/: mod.rs
netflow-pro/src/engine/: mod.rs
netflow-pro/src/ipc/: mod.rs
netflow-pro/src/state/: mod.rs
netflow-pro/src/updater/: mod.rs
netflow-pro/ui/: index.html  package.json
netflow-pro/ui/src/: App.tsx  index.css  ipc.ts  types.ts
netflow-pro/ui/src-tauri/src/: lib.rs  main.rs
netflow-pro/ui/src/components/: DeviceList.tsx  ThroughputGauge.tsx
src/: main.rs
src/discovery/: mod.rs
src/ipc/: mod.rs
src/throttle/: mod.rs
src/updater/: mod.rs
ui/: index.html  package-lock.json  package.json  tailwind.config.js
ui/src/: App.tsx  ipc.ts  types.ts
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: discovery.rs  engine.rs  lib.rs  main.rs  state.rs  throttle.rs  updater.rs
ui/src/components/: DeviceList.tsx  Header.tsx  UpdateBanner.tsx
