[package]
name = "gos3lih-ui"
version = "0.1.0"
edition = "2021"

[package.metadata.bundle]
name = "Gos3lih"
identifier = "com.gos3lih.app"
icon = ["icons/icon.ico"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
interprocess = { version = "2", features = ["tokio"] }
anyhow = "1"
tracing = "0.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
